# pathfinder_cli

./: .gitignore  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml
pathfinder/: astar.py  bfs.py  cli.py  dijkstra.py  generator.py  grid.py  render.py
pathfinder_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pathfinder_web/backend/: main.py  requirements.txt  schemas.py
pathfinder_web/frontend/: index.html  package-lock.json  package.json
pathfinder_web/frontend/src/: App.css  App.jsx
pathfinder_web/frontend/src/components/: AlgoColumn.jsx  ComparisonTable.jsx  ControlPanel.jsx  GridDisplay.jsx  Header.jsx  StatsCard.jsx
tests/: test_agreement.py  test_astar.py  test_bfs.py  test_dijkstra.py  test_grid.py
