[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinder-cli"
version = "0.1.0"
description = "BFS, Dijkstra, and A* pathfinding from scratch on a weighted grid"
requires-python = ">=3.10"
authors = [
    { name = "Sriharinesh Sureshkumar" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pathfinder = "pathfinder.cli:main"
